Customize errorHandler
